# TiMBA_Charts

./: .gitignore  CITATION.cff  COPYRIGHT  README.md  analyse.ipynb  analyse_test.py  analyse_test_new.py  pyproject.toml  requirements.txt  test.py  toolbox.py
.github/workflows/: actions.yml  coverage.xml  publish.yml
Input/: DataContainer_Sc_World500.pkl  DataContainer_Sc_m_D_GRFS_ger_all_se_cp_sa500_mbtest.pkl  DataContainer_Sc_scenario_input.pkl  DataContainer_Sc_scenario_input_103.pkl
Input/Additional_Information/: commodity_info.csv  country_info.csv  external_model_data.csv
Input/Archive/: DataContainer_Sc_TiMBA_input_ssp2_SstockElast0.35.pkl  DataContainer_Sc_TiMBA_input_ssp2_SstockElast0.6.pkl  DataContainer_Sc_TiMBA_input_ssp2_SstockElast0.85.pkl  DataContainer_Sc_TiMBA_input_ssp2_SstockElast1.6.pkl  DataContainer_Sc_World500_only_Msp_ha_testMB.pkl  DataContainer_Sc_m_D_UEFS_ger_all_se_cp_sa500_mbtest.pkl
Toolbox/: analyse.ipynb  toolbox.py
Toolbox/Input/: DataContainer_Sc_baseline_ssp1.pkl  DataContainer_Sc_baseline_ssp3.pkl  DataContainer_Sc_baseline_ssp4.pkl  DataContainer_Sc_baseline_ssp5.pkl  DataContainer_Sc_scenario_input_103_forestgrowth_manually_adjusted.pkl  DataContainer_Sc_scenario_input_103_forestgrowth_new_area_new_stock.pkl
Toolbox/classes/: bilateral_trade_db.py  dashboard.py  import_data.py  scenario_plots.py  validation_db.py
Toolbox/cli/: cli.py
Toolbox/parameters/: paths.py
classes/: dashboard.py  import_data.py  import_data_reworked.py  model_analysis.py  scenario_plots.py
tests/: test_dashboard.py
(+49 files in other folders)
