[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TiMBA Analysis Toolbox"
version = ""
description = ""
authors = [
    {name = "Julia Tandetzki", email = "",
    {name = "Christian Morland", email = ""},
    {name = "Tomke Honkomp", email = ""}
]
